Camera mode shows, pointers don't

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         </activity>
         <activity android:name=".GeoCameraActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"/>
+        <activity android:name=".GeoCamContent"
+            android:configChanges="orientation|keyboardHidden|screenSize"/>
     </application>
 
 </manifest>
